export enum DeviceType {
    CAMERA,
    SENSOR,
}
