export class Resolution {
    height;
    width;
    constructor(height, width) {
        this.height = height;
        this.width = width;
    }
}
